table widget: alignment for select, autocomplete, textfield control bug fix

--- a/widgets/materialdesign/css/widgets.css
+++ b/widgets/materialdesign/css/widgets.css
@@ -3750,6 +3750,7 @@ svg.materialdesign-widget .materialdesign-button__icon {
 }
 
 .v-select__selection.v-select__selection--comma{
+  width: 100%;
   text-align: var(--vue-text-field-alignment);
 }
 
